# garticio_selenium

./: .gitignore  LICENSE  README.md  README_zh-TW.md  adblock.crx  adblock_test.ipynb  all_in_one.ipynb  all_in_one_color.ipynb  app copy.ipynb  app.ipynb  app.py  appCorrect.ipynb  build.py  draw.ipynb  google_image.ipynb  image.ipynb  image_preprocess.ipynb  legacy_all_in_one_color.ipynb  main.ipynb  main.py  pynput.ipynb  pyproject.toml  requirements.txt  settings.toml
garticio_selenium/: app.py  draw.py  img_tool.py  my_webdriver.py
locale/en_US/LC_MESSAGES/: messages.po
locale/zh_TW/LC_MESSAGES/: messages.po
