[tool.poetry]
name = "garticio-selenium"
version = "0.1.0"
description = ""
authors = ["FOBshippingpoint <aulaulql4ql4xj6@gmail.com>"]
readme = "README.md"
packages = [{include = "garticio_selenium"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "1.22.4"
pillow = "9.4.0"
pynput = "1.7.6"
selenium = "4.3.0"
webdriver-manager = "4.0.1"
pyinstaller = "^5.8.0"
babel = "^2.12.1"
tomlkit = "^0.11.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
